--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
           let old = anchoredObjects.shift();
           old.audioSource.bufferSource.stop(0);
-          scene.removeNode(old.anchoredObjects);
-          old.anchor.delete();
+          scene.removeNode(old.context.sceneObject);
+          old.delete();
         }
       }
 
